<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tobecontacted"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tocn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/tempnumber"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/toclist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_light"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/suppliercontacted"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/scn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/tempnumber"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/sclist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_light"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sr"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/supplierresponded"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/srn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/tempnumber"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/srlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_orange_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/applicationreceived"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/arn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/tempnumber"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/arlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:orientation="vertical">

            <TextView
                android:id="@+id/as"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/applicationsubmitted"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/asn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/tempnumber"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/aslist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light" />
    </LinearLayout>
</LinearLayout>